[PANELS] fix body scrolling issues on firefox

--- a/assets/css/front/main.styl
+++ b/assets/css/front/main.styl
@@ -16,7 +16,7 @@ html
 
 body
   min-height 100%
-  background: #1e5799;
+  background: darken($pink, 15%);
   background-image -moz-radial-gradient(circle at 25% 25%,  $pink 0%, $dark-pink 75%)
   background-image -webkit-radial-gradient(circle at 25% 25%,  $pink 0%, $dark-pink 75%)
   background-image -o-radial-gradient(circle at 25% 25%,  $pink 0%, $dark-pink 75%)
